--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">#4886f3</color>
-    <color name="window_color">#f9f9f9</color>
+  <color name="colorPrimary">#00C853</color>
+  <color name="colorPrimaryDark">#00C853</color>
+  <color name="window_color">#f9f9f9</color>
 
-    <color name="gray_light">#aaaaaa</color>
-    <color name="gray_middle">#666666</color>
-    <color name="gray_dark">#333333</color>
+  <color name="gray_light">#aaaaaa</color>
+  <color name="gray_middle">#666666</color>
+  <color name="gray_dark">#333333</color>
 
-    <color name="gray_light_p50">#26aaaaaa</color>
+  <color name="gray_light_p50">#26aaaaaa</color>
 
-    <color name="white">#FFFFFF</color>
+  <color name="white">#FFFFFF</color>
 
-    <color name="selecotr_color">#4D969696</color>
+  <color name="selecotr_color">#4D969696</color>
 
 </resources>
