--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,154 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-        <variable
-            name="viewModel"
-            type="com.liuguangqiang.idaily.ui.viewmodel.MainViewModel" />
-
-    </data>
-
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_news"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="true"
-        android:fitsSystemWindows="true">
+        android:background="@color/gray_dark"
+        android:scrollbars="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+</RelativeLayout>
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:id="@+id/main_content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true">
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+    <!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--    xmlns:app="http://schemas.android.com/apk/res-auto">-->
 
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/appbar"
-                android:layout_width="match_parent"
-                android:layout_height="256dp"
-                android:fitsSystemWindows="true"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    <!--    <data>-->
 
-                <com.google.android.material.appbar.CollapsingToolbarLayout
-                    android:id="@+id/collapsing_toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fitsSystemWindows="true"
-                    app:contentScrim="?attr/colorPrimary"
-                    app:expandedTitleMarginEnd="24dp"
-                    app:expandedTitleMarginStart="50dp"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
+    <!--        <variable-->
+    <!--            name="viewModel"-->
+    <!--            type="com.liuguangqiang.idaily.ui.viewmodel.MainViewModel" />-->
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:fitsSystemWindows="true"
-                        app:layout_collapseMode="parallax"
-                        app:layout_scrollFlags="scroll|enterAlways">
+    <!--    </data>-->
 
-                        <androidx.viewpager.widget.ViewPager
-                            android:id="@+id/view_pager"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+    <!--    <androidx.drawerlayout.widget.DrawerLayout-->
+    <!--        android:id="@+id/drawer_layout"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:clipToPadding="true"-->
+    <!--        android:fitsSystemWindows="true">-->
 
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="20dp"
-                            android:layout_alignParentBottom="true">
+    <!--        <androidx.coordinatorlayout.widget.CoordinatorLayout-->
+    <!--            android:id="@+id/main_content"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:fitsSystemWindows="true">-->
 
-                            <com.viewpagerindicator.CirclePageIndicator
-                                android:id="@+id/indicator"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerInParent="true"
-                                android:layout_marginBottom="10dp"
-                                app:fillColor="@color/white"
-                                app:gapWidth="8dp"
-                                app:pageColor="@color/gray_light"
-                                app:strokeWidth="0dp" />
-                        </RelativeLayout>
-                    </RelativeLayout>
+    <!--            <com.google.android.material.appbar.AppBarLayout-->
+    <!--                android:id="@+id/appbar"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="256dp"-->
+    <!--                android:fitsSystemWindows="true"-->
+    <!--                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
 
-                    <androidx.appcompat.widget.Toolbar
-                        android:id="@+id/toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="?attr/actionBarSize"
-                        app:layout_collapseMode="pin"
-                        app:layout_scrollFlags="scroll|enterAlways"
-                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+    <!--                <com.google.android.material.appbar.CollapsingToolbarLayout-->
+    <!--                    android:id="@+id/collapsing_toolbar"-->
+    <!--                    android:layout_width="match_parent"-->
+    <!--                    android:layout_height="match_parent"-->
+    <!--                    android:fitsSystemWindows="true"-->
+    <!--                    app:contentScrim="?attr/colorPrimary"-->
+    <!--                    app:expandedTitleMarginEnd="24dp"-->
+    <!--                    app:expandedTitleMarginStart="50dp"-->
+    <!--                    app:layout_scrollFlags="scroll|exitUntilCollapsed">-->
 
-                </com.google.android.material.appbar.CollapsingToolbarLayout>
+    <!--                    <RelativeLayout-->
+    <!--                        android:layout_width="match_parent"-->
+    <!--                        android:layout_height="match_parent"-->
+    <!--                        android:fitsSystemWindows="true"-->
+    <!--                        app:layout_collapseMode="parallax"-->
+    <!--                        app:layout_scrollFlags="scroll|enterAlways">-->
 
-            </com.google.android.material.appbar.AppBarLayout>
+    <!--                        <androidx.viewpager.widget.ViewPager-->
+    <!--                            android:id="@+id/view_pager"-->
+    <!--                            android:layout_width="match_parent"-->
+    <!--                            android:layout_height="match_parent" />-->
 
-            <com.liuguangqiang.support.widgets.recyclerview.SuperRecyclerView
-                android:id="@+id/rv_news"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                app:adapter="@{viewModel.adapter}"
-                app:data="@{viewModel.data}"
-                app:footerStatus="@{viewModel.footerStatus}"
-                app:isLoading="@{viewModel.isLoading}"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                app:onPageListener="@{viewModel.onPageListener}" />
+    <!--                        <RelativeLayout-->
+    <!--                            android:layout_width="match_parent"-->
+    <!--                            android:layout_height="20dp"-->
+    <!--                            android:layout_alignParentBottom="true">-->
 
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <!--&lt;!&ndash;                            <com.viewpagerindicator.CirclePageIndicator&ndash;&gt;-->
+    <!--&lt;!&ndash;                                android:id="@+id/indicator"&ndash;&gt;-->
+    <!--&lt;!&ndash;                                android:layout_width="wrap_content"&ndash;&gt;-->
+    <!--&lt;!&ndash;                                android:layout_height="wrap_content"&ndash;&gt;-->
+    <!--&lt;!&ndash;                                android:layout_centerInParent="true"&ndash;&gt;-->
+    <!--&lt;!&ndash;                                android:layout_marginBottom="10dp"&ndash;&gt;-->
+    <!--&lt;!&ndash;                                app:fillColor="@color/white"&ndash;&gt;-->
+    <!--&lt;!&ndash;                                app:gapWidth="8dp"&ndash;&gt;-->
+    <!--&lt;!&ndash;                                app:pageColor="@color/gray_light"&ndash;&gt;-->
+    <!--&lt;!&ndash;                                app:strokeWidth="0dp" />&ndash;&gt;-->
+    <!--                        </RelativeLayout>-->
+    <!--                    </RelativeLayout>-->
 
-        <LinearLayout
-            android:layout_width="320dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="@color/white"
-            android:clickable="true"
-            android:orientation="vertical">
+    <!--                    <androidx.appcompat.widget.Toolbar-->
+    <!--                        android:id="@+id/toolbar"-->
+    <!--                        android:layout_width="match_parent"-->
+    <!--                        android:layout_height="?attr/actionBarSize"-->
+    <!--                        app:layout_collapseMode="pin"-->
+    <!--                        app:layout_scrollFlags="scroll|enterAlways"-->
+    <!--                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:background="@color/colorPrimary"
-                android:clickable="true"
-                android:fitsSystemWindows="true"
-                android:padding="16dp">
+    <!--                </com.google.android.material.appbar.CollapsingToolbarLayout>-->
 
-                <TextView
-                    android:id="@+id/iv_avatar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@+id/tv_username"
-                    android:text="@string/app_name"
-                    android:textColor="@color/white"
-                    android:textSize="48sp"
-                    android:textStyle="bold" />
+    <!--            </com.google.android.material.appbar.AppBarLayout>-->
 
-                <TextView
-                    android:id="@+id/tv_username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginTop="10dp"
-                    android:text="Unofficial Zhihu Daily"
-                    android:textColor="@android:color/white"
-                    android:textSize="16sp" />
+    <!--            <androidx.recyclerview.widget.RecyclerView-->
+    <!--                android:id="@+id/rv_news"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="match_parent"-->
+    <!--                android:background="@color/gray_dark"-->
+    <!--                android:scrollbars="vertical"-->
+    <!--                app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->
 
-            </RelativeLayout>
+    <!--&lt;!&ndash;            <com.liuguangqiang.support.widgets.recyclerview.SuperRecyclerView&ndash;&gt;-->
+    <!--&lt;!&ndash;                android:id="@+id/rv_news"&ndash;&gt;-->
+    <!--&lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
+    <!--&lt;!&ndash;                android:layout_height="match_parent"&ndash;&gt;-->
+    <!--&lt;!&ndash;                android:scrollbars="vertical"&ndash;&gt;-->
+    <!--&lt;!&ndash;                app:adapter="@{viewModel.adapter}"&ndash;&gt;-->
+    <!--&lt;!&ndash;                app:data="@{viewModel.data}"&ndash;&gt;-->
+    <!--&lt;!&ndash;                app:footerStatus="@{viewModel.footerStatus}"&ndash;&gt;-->
+    <!--&lt;!&ndash;                app:isLoading="@{viewModel.isLoading}"&ndash;&gt;-->
+    <!--&lt;!&ndash;                app:layout_behavior="@string/appbar_scrolling_view_behavior"&ndash;&gt;-->
+    <!--&lt;!&ndash;                app:onPageListener="@{viewModel.onPageListener}" />&ndash;&gt;-->
 
-            <TextView
-                android:id="@+id/tv_github"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rv_selector"
-                android:drawableLeft="@mipmap/ic_github"
-                android:drawablePadding="32dp"
-                android:gravity="center_vertical"
-                android:padding="16dp"
-                android:text="Github"
-                android:textColor="@color/gray_middle"
-                android:textSize="@dimen/font_size_middle"
-                app:onClickListener="@{viewModel.onClickListener}" />
-        </LinearLayout>
+    <!--        </androidx.coordinatorlayout.widget.CoordinatorLayout>-->
 
-    </androidx.drawerlayout.widget.DrawerLayout>
+    <!--        <LinearLayout-->
+    <!--            android:layout_width="320dp"-->
+    <!--            android:layout_height="match_parent"-->
+    <!--            android:layout_gravity="start"-->
+    <!--            android:background="@color/white"-->
+    <!--            android:clickable="true"-->
+    <!--            android:orientation="vertical">-->
 
-</layout>
+    <!--            <RelativeLayout-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="250dp"-->
+    <!--                android:background="@color/colorPrimary"-->
+    <!--                android:clickable="true"-->
+    <!--                android:fitsSystemWindows="true"-->
+    <!--                android:padding="16dp">-->
+
+    <!--                <TextView-->
+    <!--                    android:id="@+id/iv_avatar"-->
+    <!--                    android:layout_width="wrap_content"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:layout_above="@+id/tv_username"-->
+    <!--                    android:text="@string/app_name"-->
+    <!--                    android:textColor="@color/white"-->
+    <!--                    android:textSize="48sp"-->
+    <!--                    android:textStyle="bold" />-->
+
+    <!--                <TextView-->
+    <!--                    android:id="@+id/tv_username"-->
+    <!--                    android:layout_width="wrap_content"-->
+    <!--                    android:layout_height="wrap_content"-->
+    <!--                    android:layout_alignParentBottom="true"-->
+    <!--                    android:layout_marginTop="10dp"-->
+    <!--                    android:text="Unofficial Zhihu Daily"-->
+    <!--                    android:textColor="@android:color/white"-->
+    <!--                    android:textSize="16sp" />-->
+
+    <!--            </RelativeLayout>-->
+
+    <!--            <TextView-->
+    <!--                android:id="@+id/tv_github"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:background="@drawable/rv_selector"-->
+    <!--                android:drawableLeft="@mipmap/ic_github"-->
+    <!--                android:drawablePadding="32dp"-->
+    <!--                android:gravity="center_vertical"-->
+    <!--                android:padding="16dp"-->
+    <!--                android:text="Github"-->
+    <!--                android:textColor="@color/gray_middle"-->
+    <!--                android:textSize="@dimen/font_size_middle"-->
+    <!--                app:onClickListener="@{viewModel.onClickListener}" />-->
+    <!--        </LinearLayout>-->
+
+    <!--    </androidx.drawerlayout.widget.DrawerLayout>-->
+
+    <!--</layout>-->
