--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,28 +4,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:clipToPadding="true"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/main_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:layout_height="match_parent">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="256dp"
-            android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
+                android:layout_height="wrap_content"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleMarginEnd="24dp"
                 app:expandedTitleMarginStart="50dp"
@@ -34,31 +29,22 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:fitsSystemWindows="true"
                     app:layout_collapseMode="parallax"
                     app:layout_scrollFlags="scroll|enterAlways">
 
                     <androidx.viewpager.widget.ViewPager
                         android:id="@+id/view_pager"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:visibility="gone" />
 
-                    <RelativeLayout
+                    <com.youth.banner.Banner
+                        android:id="@+id/banner"
                         android:layout_width="match_parent"
-                        android:layout_height="20dp"
-                        android:layout_alignParentBottom="true">
-
-                        <!--                        <com.viewpagerindicator.CirclePageIndicator-->
-                        <!--                            android:id="@+id/indicator"-->
-                        <!--                            android:layout_width="wrap_content"-->
-                        <!--                            android:layout_height="wrap_content"-->
-                        <!--                            android:layout_centerInParent="true"-->
-                        <!--                            android:layout_marginBottom="10dp"-->
-                        <!--                            app:fillColor="@color/white"-->
-                        <!--                            app:gapWidth="8dp"-->
-                        <!--                            app:pageColor="@color/gray_light"-->
-                        <!--                            app:strokeWidth="0dp" />-->
-                    </RelativeLayout>
+                        android:layout_height="256dp"
+                        app:banner_auto_loop="true"
+                        app:banner_indicator_height="5dp"
+                        app:banner_indicator_margin="5dp" />
                 </RelativeLayout>
 
                 <androidx.appcompat.widget.Toolbar
