--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-  <color name="colorPrimary">#00C853</color>
-  <color name="colorPrimaryDark">#00C853</color>
+  <color name="colorPrimary">#f9f9f9</color>
+  <color name="colorPrimaryDark">#f9f9f9</color>
   <color name="window_color">#f9f9f9</color>
 
   <color name="gray_light">#aaaaaa</color>
