refactoring and remove unused files

--- a/app/src/main/res/layout/fragment_top_story.xml
+++ b/app/src/main/res/layout/fragment_top_story.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.liuguangqiang.idaily.ui.viewmodel.TopStoryViewModel" />
+            type="com.liuguangqiang.idaily.feature.main.TopStoryViewModel" />
     </data>
 
     <RelativeLayout
