--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.liuguangqiang.idaily.ui.widget.RevealBackgroundView
+    <com.liuguangqiang.idaily.widget.RevealBackgroundView
         android:id="@+id/rl_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
