--- a/app/src/main/res/layout/item_story_header.xml
+++ b/app/src/main/res/layout/item_story_header.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="section"
-            type="com.liuguangqiang.idaily.domain.entity.StorySection" />
+            type="com.liuguangqiang.idaily.api.entity.StorySection" />
     </data>
 
     <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
